# SlideShow

./: CMakeLists.txt  app.cpp  app.h  image_engine.cpp  image_engine.h  image_operations.cpp  image_operations.h  image_view.cpp  image_view.h  main.cpp  ressource.qrc
